--- a/MERIDIAN-infra/mediamtx.yml
+++ b/MERIDIAN-infra/mediamtx.yml
@@ -14,7 +14,7 @@ pathDefaults:
 # --- Paths ---
 # access video in http://127.0.0.1:8889/<path_name>
 paths:
-  meridian_cam: # stream XXXX://127.0.0.1:YYYY/meridian_cam
+  internal_cam: # stream XXXX://127.0.0.1:YYYY/internal_cam
     {}
-  client_cam: # stream XXXX://127.0.0.1:YYYY/client_cam
+  external_cam: # stream XXXX://127.0.0.1:YYYY/external_cam
     {}
